# pysls

./: EVENT_INFO.md  LICENSE  README.md  pyproject.toml  requirements.txt  scripts.py  test_anti_import_bug.py  test_sum.py
.github/workflows/: CI.yml
pysls/src/: create_lambda.py  create_layer.py  deploy_to_localstack.py  invoke_function.py  main.py  view_logs.py
pysls/src/create/: create_lambda.py  create_layer.py
pysls/src/events/: generate_event.py
pysls/src/events/model_files/sagemaker/: AnnotationConsolidation.json
pysls/src/events/model_files/sns/: Sns.json
pysls/src/localstack/: deploy_to_localstack.py  invoke_function.py  update_to_localstack.py  view_logs.py
pysls/tests/: create_lambda_test.py  create_layer_test.py  generate_event_test.py  utils_test.py
pysls/utils/: copy_folder.py  rmdir.py  zip_files.py
