[tool.poetry]
name = "pysls"
version = "1.0.2"
description = ""
readme = "README.md"
authors = ["LucasFDutra"]
exclude = ["pysls/tests"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.10.1"

[tool.poetry.plugins."console_scripts"]
"pysls" = "pysls.src.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

